# v0-app-recreation-request

./: .gitignore  BUILD_INSTRUCTIONS.md  README.md  README_BUILD.md  build.sh  capacitor.config.json  package.json  pnpm-lock.yaml
.github/workflows/: android.yml
app/: globals.css  layout.tsx  page.tsx
components/: about-page.tsx  accounts-page.tsx  add-client-page.tsx  app-content.tsx  app-root.tsx  app-shell.tsx  backup-page.tsx  clients-page.tsx  home-screen.tsx  invoice.tsx  khaleeji-measurements.tsx  login-screen.tsx  measurement-settings-page.tsx  pwa-register.tsx  reports-page.tsx  sidebar.tsx  tracking-page.tsx  user-settings-page.tsx
components/ui/: dialog.tsx
lib/: context.tsx  measurements-labels.ts  pdf-utils.ts
public/: manifest.json  offline.html  service-worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
