[package]
name = "tailor-app"
version = "1.0.0"
description = "تطبيق إدارة مقاسات الخياطة والتفصيل"
authors = ["اليرموك"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
